--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,11 @@
 		<artifactId>modules</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
+	
+	<dependencies>
+		<dependency>
+			<groupId>nabu.protocols.http</groupId>
+			<artifactId>server</artifactId>
+		</dependency>
+	</dependencies>
 </project>
