--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nabu.web</groupId>
 	<artifactId>application</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>${nabu.web-application-version}</version>
 	<name>application</name>
 	
 	<parent>
